--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/_Nav.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/_Nav.cshtml
@@ -18,14 +18,19 @@
 
 <div class="sticky-header-setup"></div>
 <div class="sticky-header mb-l">
-    <h2 class="mt-1 mb-2 mb-lg-4">Boltz</h2>
+    <div class="d-flex flex-row justify-content-between mt-1 mb-2 mb-lg-4">
+        <h2>Boltz</h2>
+        <a asp-action="SetupMode" asp-route-storeId="@storeId" class="btn btn-secondary text-nowrap">
+            Setup
+        </a>
+    </div>
     @if (client is not null)
     {
         <nav id="SectionNav">
             <div class="nav">
                 <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Info" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Info")">Info</a>
-                <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Configure" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Configure")">Configure</a>
-                <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Connect" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Connect")">Connect</a>
+                <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Configuration" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Configuration")">Configuration</a>
+                <a permission="@Policies.CanViewStoreSettings" asp-controller="Boltz" asp-action="Admin" asp-route-storeId="@storeId" class="nav-link @ViewData.IsActivePage("Boltz", null, "Admin")">Admin</a>
             </div>
         </nav>
     }
