--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/_LayoutSetup.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/_LayoutSetup.cshtml
@@ -14,7 +14,7 @@
 @section Navbar {
     @await RenderSectionAsync("Navbar", false)
 
-    <a asp-controller="UIStores" asp-action="Dashboard" asp-route-storeId="@Context.GetRouteValue("storeId")" class="cancel">
+    <a asp-controller="Boltz" asp-action="Info" asp-route-storeId="@Context.GetRouteValue("storeId")" class="cancel">
         <vc:icon symbol="close"/>
     </a>
 }
