--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
@@ -27,15 +27,28 @@
 }
 else
 {
+    @if (BoltzService.Daemon.NodeError is not null)
+    {
+        <div class="alert alert-danger">@BoltzService.Daemon.NodeError</div>
+    }
+    @if (BoltzService.Daemon.LatestStderr is not null)
+    {
+        <div class="alert alert-danger">@BoltzService.Daemon.LatestStdout</div>
+        <div class="alert alert-danger">@BoltzService.Daemon.LatestStderr</div>
+    }
+
     <div class="mt-4">
         <div class="list-group">
             <a asp-controller="Boltz" asp-action="SetupMode" asp-route-storeId="@storeId" asp-route-mode="Rebalance" class="list-group-item list-group-item-action @(Model.AllowRebalance ? "" : "disabled")">
                 <div class="image">
                     <vc:icon symbol="existing-wallet"/>
                 </div>
-                <div class="content">
-                    <h4>Rebalance existing node</h4>
-                    <p class="mb-0 text-secondary">This sets up automated rebalancing for the Lightning node connected to your BTCPay instance, to make sure you always have enough Liquidity to reliably accept payments.</p>
+                <div class="content d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between me-2">
+                    <div>
+                        <h4>Rebalance existing node</h4>
+                        <p class="mb-0 text-secondary">This sets up automated rebalancing for the Lightning node connected to your BTCPay instance, to make sure you always have enough Liquidity to reliably accept payments.</p>
+                    </div>
+                    <small class="d-block text-danger mt-2 mt-lg-0" data-bs-toggle="tooltip" data-bs-placement="top" title="You really should not type your seed into a device that is connected to the internet.">Not available</small>
                 </div>
                 <vc:icon symbol="caret-right"/>
             </a>
