--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Admin.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Admin.cshtml
@@ -2,7 +2,7 @@
 @using BTCPayServer.Plugins.Boltz.Views
 @model BTCPayServer.Plugins.Boltz.Models.BoltzConnection
 @{
-    ViewData.SetActivePage("Boltz", "Connect", "Connect");
+    ViewData.SetActivePage("Boltz", "Admin", "Admin");
 
     var boltzCredsSet = Model?.Settings?.CredentialsPopulated() ?? false;
 }
