--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupRebalance.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupRebalance.cshtml
@@ -48,7 +48,7 @@
 
 <div class="mt-4">
     <div class="list-group">
-        <a asp-controller="Boltz" asp-action="SetupWallet" asp-route-flow="@WalletSetupFlow.Lightning" asp-route-storeId="@storeId" asp-route-swapType="both" class="list-group-item list-group-item-action">
+        <a asp-controller="Boltz" asp-action="SetupWallet" asp-route-flow="@WalletSetupFlow.Lightning" asp-route-storeId="@storeId" class="list-group-item list-group-item-action">
             <div class="image">
                 <vc:icon symbol="new-wallet"/>
             </div>
