--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/GetStarted.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/GetStarted.cshtml
@@ -3,7 +3,7 @@
 @using BTCPayServer.Plugins.Boltz
 @using BTCPayServer.Client
 @using Microsoft.AspNetCore.Authorization
-@model BTCPayServer.Plugins.Boltz.Models.BoltzSetup
+@model BTCPayServer.Plugins.Boltz.Models.ModeSetup
 @inject BoltzService BoltzService
 @inject IAuthorizationService AuthorizationService
 @{
