--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/_Layout.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "../Shared/_NavLayout.cshtml";
-    ViewData["NavPartialName"] = "_Nav";
+    ViewData["IsSetup"] = false;
 }
 <style>
 /*
