--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/LNPaymentMethodSetupTabhead.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/LNPaymentMethodSetupTabhead.cshtml
@@ -20,6 +20,6 @@
 }
 else
 {
-    <input value="Custom" type="radio" id="LightningNodeType-Boltz" data-bs-toggle="pill" data-bs-target="#BoltzSetup" role="tab" aria-controls="BoltzSetup" aria-selected="false" name="LightningNodeType">
-    <label for="LightningNodeType-Boltz">Use Boltz wallet</label>
+    <input asp-for="LightningNodeType" value="Custom" type="radio" id="LightningNodeType-Boltz" data-bs-toggle="pill" data-bs-target="#BoltzSetup" role="tab" aria-controls="BoltzSetup" aria-selected="false" name="LightningNodeType">
+    <label asp-for="LightningNodeType" for="LightningNodeType-Boltz">Use Boltz wallet</label>
 }
