--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupChain.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupChain.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model BTCPayServer.Plugins.Boltz.Models.BalanceSetup
+@model BTCPayServer.Plugins.Boltz.Models.ChainSetup
 @{
     Layout = "_LayoutSetup";
     ViewData["Title"] = "Setup Chain Swaps";
@@ -13,8 +13,8 @@
 <form method="post" class="mt-3">
 
     <div class="form-group absolute">
-        <label for="MaxBalance" class="form-label">When my L-BTC balance reached (@unitSats)</label>
-        <input id="MaxBalance" name="MaxBalance" type="number" min="0" class="form-control"/>
+        <label asp-for="MaxBalance" class="form-label">When my L-BTC balance reached (@unitSats)</label>
+        <input asp-for="MaxBalance" type="number" min="@Model.MaxBalance" class="form-control"/>
     </div>
 
     <div class="d-flex flex-row gap-2 justify-content-between">
