--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/LNPaymentMethodSetupTab.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/LNPaymentMethodSetupTab.cshtml
@@ -9,11 +9,9 @@
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
-       
        const customNodeAccordian = document.getElementById("CustomNodeSupport");
        const template = document.getElementById("boltz");
        customNodeAccordian.appendChild(template.content.cloneNode(true));
-        
     });
 </script>
 
@@ -32,8 +30,12 @@
                         <code><b>type=</b>blink;<b>server=</b>https://api.blink.sv/graphql;<b>api-key</b>=blink_...;<b>wallet-id=</b>xyz</code>
                     </li>
                 </ul>
-                <p class="my-2">Head over to the <a href="https://dashboard.blink.sv" target="_blank" rel="noreferrer noopener" >Boltz dashboard</a> and create an api key. The server is optional and will use the default Boltz instance.The wallet-id is optional and will use the default wallet otherwise.</p>
+                <p class="my-2">Head over to the <a href="https://dashboard.blink.sv" target="_blank" rel="noreferrer noopener">Boltz dashboard</a> and create an api key. The server is optional and will use the default Boltz instance.The wallet-id is optional and will use the default wallet otherwise.</p>
             </div>
         </div>
     </div>
 </template>
+
+<div id="BoltzSetup" class="pt-3 tab-pane fade" role="tabpanel" aria-labelledby="LightningNodeType-Boltz">
+    hi
+</div>
