--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_Fees.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_Fees.cshtml
@@ -1,13 +1,9 @@
 @using BTCPayServer.Plugins.Boltz
-@using BTCPayServer.Security
 @using Boltzrpc
 @using BTCPayServer.Plugins.Boltz.Models
 @inject BoltzService BoltzService
 @{
-    var storeId = Context.GetImplicitStoreId();
-    var client = BoltzService.GetClient(storeId);
-
-    var pairInfo = await client!.GetPairInfo(new Pair { From = Currency.Btc, To = Currency.Lbtc }, SwapType.Reverse);
+    var pairInfo = await BoltzService.AdminClient.GetPairInfo(new Pair { From = Currency.Btc, To = Currency.Lbtc }, SwapType.Reverse);
     var stats = new List<Stat>
     {
         new() { Name = "Boltz Service Fee", Value = pairInfo.Fees.Percentage, Unit = Unit.Percent },
