feat: wording updates

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupRebalance.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupRebalance.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="content d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between me-2">
                 <div>
-                    <h4>Guarantee Inboundg Liquidity</h4>
-                    <p class="mb-0 text-secondary">Upload a file exported from your wallet</p>
+                    <h4>Guarantee Inbound Liquidity</h4>
+                    <p class="mb-0 text-secondary">Select this mode, e.g. if you are a merchant and need to be able to receive Lightning payments reliably.</p>
                 </div>
                 <small class="d-block text-primary mt-2 mt-lg-0">Popular</small>
             </div>
@@ -38,8 +38,8 @@
                 <vc:icon symbol="new-wallet"/>
             </div>
             <div class="content">
-                <h4>Normal</h4>
-                <p class="mb-0 text-secondary">This sets up Lightning Payments using Boltz. Lightning payments are processed using non-custodial swaps, meaning you stay in full control at all times. Supports read-only cold wallets.</p>
+                <h4>Guarantee Outbound Liquidity</h4>
+                <p class="mb-0 text-secondary">Select this mode, e.g. if you are running a Bitcoin ATM that accepts FIAT and needs to be able to send Lightning payments reliably.</p>
             </div>
             <vc:icon symbol="caret-right"/>
         </a>
@@ -53,8 +53,8 @@
                 <vc:icon symbol="new-wallet"/>
             </div>
             <div class="content">
-                <h4>Both</h4>
-                <p class="mb-0 text-secondary">This sets up Lightning Payments using Boltz. Lightning payments are processed using non-custodial swaps, meaning you stay in full control at all times. Supports read-only cold wallets.</p>
+                <h4>Guarantee Both</h4>
+                <p class="mb-0 text-secondary">Select this mode, e.g. if you are operating a Bitcoin exchange and offer Lightning deposits and withdrawals and need to be able to send and receive reliably.</p>
             </div>
             <vc:icon symbol="caret-right"/>
         </a>
