--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupMode.cshtml
@@ -46,8 +46,8 @@ else
                 </div>
                 <div class="content d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between">
                     <div>
-                        <h4>Rebalance existing node</h4>
-                        <p class="mb-0 text-secondary">This sets up automated rebalancing for the Lightning node connected to your BTCPay instance, to make sure you always have enough Liquidity to reliably accept payments.</p>
+                        <h4>Rebalance existing Lightning node</h4>
+                        <p class="mb-0 text-secondary">This sets up automated rebalancing for the Lightning node connected to your BTCPay instance, to make sure you always have enough Liquidity to reliably process payments.</p>
                     </div>
                     @if (!Model.AllowRebalance)
                     {
@@ -68,8 +68,8 @@ else
                     <vc:icon symbol="new-wallet"/>
                 </div>
                 <div class="content">
-                    <h4>Set up Lightning Payments</h4>
-                    <p class="mb-0 text-secondary">This sets up Lightning Payments using Boltz. Lightning payments are processed using non-custodial swaps, meaning you stay in full control at all times. Supports read-only cold wallets.</p>
+                    <h4>Accept Lightning payments without running a node</h4>
+                    <p class="mb-0 text-secondary">This sets up Lightning payments using Boltz. Lightning payments are processed using non-custodial swaps, meaning you stay in full control at all times. Supports read-only cold wallets.</p>
                 </div>
                 <vc:icon symbol="caret-right"/>
             </a>
