fix: more wording adjustments

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupRebalance.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupRebalance.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="content">
                 <h4>Guarantee Outbound Liquidity</h4>
-                <p class="mb-0 text-secondary">Select this mode, e.g. if you are running a Bitcoin ATM that accepts FIAT and needs to be able to send Lightning payments reliably.</p>
+                <p class="mb-0 text-secondary">Select this mode, e.g. if you are running a Bitcoin ATM that accepts FIAT and need to be able to send Lightning payments reliably.</p>
             </div>
             <vc:icon symbol="caret-right"/>
         </a>
@@ -54,7 +54,7 @@
             </div>
             <div class="content">
                 <h4>Guarantee Both</h4>
-                <p class="mb-0 text-secondary">Select this mode, e.g. if you are operating a Bitcoin exchange and offer Lightning deposits and withdrawals and need to be able to send and receive reliably.</p>
+                <p class="mb-0 text-secondary">Select this mode, e.g. if you are operating a Bitcoin exchange and offer Lightning deposits and withdrawals and need to be able to send *and* receive reliably.</p>
             </div>
             <vc:icon symbol="caret-right"/>
         </a>
