--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupCurrency.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupCurrency.cshtml
@@ -17,7 +17,7 @@
             <div class="content d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between me-2">
                 <div>
                     <h4>Liquid</h4>
-                    <p class="mb-0 text-secondary">Select this option to rebalance using Liquid’s L-BTC and benefit from reliably cheap network fees and avoid rebalancing costs spiraling out of control when mainchain miner fees rise. Features integrated Liquid wallet.</p>
+                    <p class="mb-0 text-secondary">Select this option to rebalance using Liquid’s L-BTC and benefit from reliably cheap network fees and avoid rebalancing costs spiraling out of control when mainchain miner fees rise. The setup features creating a new Liquid wallet.</p>
                 </div>
                 <small class="d-block text-primary mt-2 mt-lg-0">Popular</small>
             </div>
@@ -34,7 +34,7 @@
             </div>
             <div class="content">
                 <h4>Mainchain</h4>
-                <p class="mb-0 text-secondary">Select this mode to rebalance using regular mainchain BTC. It is the safest, but also the most expensive and most unreliable way to rebalance.</p>
+                <p class="mb-0 text-secondary">Select this mode to rebalance using regular mainchain BTC. It is the most sovereign, but also the most expensive and most unreliable way to rebalance.</p>
             </div>
             <vc:icon symbol="caret-right"/>
         </a>
