fix: wording admin page

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Admin.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Admin.cshtml
@@ -10,7 +10,7 @@
 @if (boltzCredsSet)
 {
 <p>
-    Connected to @Model?.Info?.Version
+    Connected to Boltz Client @Model?.Info?.Version
 </p>
 }
 
@@ -43,7 +43,7 @@
     @if (boltzCredsSet)
     {
         <button name="command" type="submit" class="btn btn-danger" value="BoltzClearCredentials">
-            Disconnect client
+            Disconnect Boltz Client
         </button>
     }
     else
