--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupChain.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupChain.cshtml
@@ -14,7 +14,7 @@
 
     <div class="form-group absolute">
         <label asp-for="MaxBalance" class="form-label">When my L-BTC balance reached (@unitSats)</label>
-        <input asp-for="MaxBalance" type="number" min="@Model.MaxBalance" class="form-control"/>
+        <input asp-for="MaxBalance" type="number" min="@(Model.PairInfo.Limits.Minimal + 10000)" class="form-control"/>
     </div>
 
     <div class="d-flex flex-row gap-2 justify-content-between">
